Fixing tab focus logic - adding style visibility: hidden, since aria-hidden is not being inherited

--- a/src/components/newContact/newContact.module.css
+++ b/src/components/newContact/newContact.module.css
@@ -13,6 +13,9 @@
   &.dark {
     background-color: var(--background-color-dark);
   }
+  &.hidden {
+    visibility: hidden;
+  }
 }
 
 .header {
