--- a/src/components/newGroup/newGroup.module.css
+++ b/src/components/newGroup/newGroup.module.css
@@ -12,6 +12,9 @@
   &.dark {
     background-color: var(--background-color-dark);
   }
+  &.hidden {
+    visibility: hidden;
+  }
 }
 
 .header {
