--- a/src/components/settings/settings.module.css
+++ b/src/components/settings/settings.module.css
@@ -10,6 +10,9 @@
   transform: translateX(-100%);
   transition: 0.5s;
   min-height: 100vh;
+  &.hidden {
+    visibility: hidden;
+  }
   &.dark {
     background-color: var(--background-color-dark);
     button,
